# hello_relm

./: .gitignore  Cargo.toml  flake.nix
resources/: resources.gresource.xml  window.xml
src/: main.rs  window.rs
