[package]
name = "clash_gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = { version = "0.5.0", features = ["libadwaita"]}
relm4-components = "0.5.0"
[build-dependencies]
glib-build-tools = "0.17.0"